# goatsi

./: .gitignore  README.md  main.py  pyproject.toml
goatsi/: cli.py
goatsi/commands/: eval.py  explain.py  fit.py  split.py
goatsi/src/: defaults.json  utils.py
