[project]
name = "goatsi"
version = "0.1.0"
description = "Fast ML prototyping tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.3",
    "plotext>=5.3.2",
    "rich>=14.3.3",
    "scikit-learn>=1.7.2",
    "shap>=0.49.1",
    "tdqm>=0.0.1",
    "xgboost==3.0.0",
]
